<resources>
    <string name="app_name">Weather &amp; Workout</string>
    <string name="sunrise">Sunrise</string>
    <string name="city">No location</string>
    <string name="no_location">City name or zip and country code</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
    <string name="air_quality">Air Quality</string>
    <string name="humidity">Humidity</string>
    <string name="aqi">0</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="time">21:37</string>
    <string name="date">2 April 2005, 21:37</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="temp">21°C</string>
    <string name="btn">button</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="inputCityName">Input city name</string>
    <string name="find">Add</string>
</resources>