<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25sp"
    android:background="@drawable/bg_gradient">

    <RelativeLayout android:id="@+id/mainContainer" android:layout_width="match_parent"
        android:layout_height="match_parent" android:visibility="visible">
        <LinearLayout android:id="@+id/addressContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout android:id="@+id/overviewContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView android:id="@+id/status" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/clear_sky"/>

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/temp"
                android:textSize="90sp" />

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp" />
                <Space android:layout_width="50sp" android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout android:id="@+id/detailsContainer" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0sp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8sp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="@string/sunrise"
                        android:src="@drawable/sunrise"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/sunrise"/>

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="14sp" />
                </LinearLayout>
                <Space android:layout_width="10sp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0sp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8sp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="@string/sunset"
                        android:src="@drawable/sunset"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/sunset"/>

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="14sp" />
                </LinearLayout>
                <Space android:layout_width="10sp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0sp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8sp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="@string/wind"
                        android:src="@drawable/wind"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/wind"/>

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <Space android:layout_width="wrap_content" android:layout_height="10sp"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:weightSum="3">
                <LinearLayout android:layout_width="0sp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8sp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="@string/pressure"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="#263238"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textSize="14sp" />
                </LinearLayout>
                <Space android:layout_width="10sp" android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0sp" android:layout_height="wrap_content"
                    android:orientation="vertical" android:layout_weight="1"
                    android:gravity="center" android:padding="8sp"
                    android:background="#3CF1EBF1">

                    <ImageView
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="@string/humidity"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF" />
                    <Space android:layout_width="wrap_content" android:layout_height="5sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:textSize="12sp" android:text="@string/humidity"/>

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="14sp" />
                </LinearLayout>
                <Space android:layout_width="10sp" android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/aqiinfo"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8sp">

                    <ImageView
                        android:id="@+id/airicon"
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:contentDescription="@string/air_quality"
                        android:src="@drawable/airquality2"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5sp" />

                    <TextView
                        android:id="@+id/airtext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/air_quality"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/aqi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aqi"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar android:id="@+id/loader" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView android:id="@+id/errorText" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone" android:text="@string/something_went_wrong"/>


</RelativeLayout>